# clash-prover

./: .gitignore  CHANGELOG.md  LICENSE  build.sh  cabal.project  cabalRun.py  my-prover.cabal  showGraphviz.py
.github/workflows/: haskell.yml
pluginUser/: TestModule.hs
src/: Annotations.hs  CorePrintPlugin.hs  CorePrinter.hs  Invariants.hs  Language.hs  Primitives.hs  Properties.hs
src/CoreTranslate/: Inlining.hs  Language.hs  LanguageUtils.hs  Translate.hs
src/Execute/: Primitives.hs  Simplify.hs
src/Language/: Expression.hs  Language.hs  LanguageUtils.hs  ToGraphviz.hs  Translate.hs  Types.hs
src/Prove/: MealyProver.hs  ProveSimpleEquiv.hs  ToSmt.hs
src/Prover/: LazyExecute.hs
src/Rewrite/: Deconstruct.hs  OperationalRewrite.hs  Primitives.hs  Simplify.hs
src/Utils/: Graph.hs  ToGraphviz.hs
test/: TestModule.hs  doctests.hs  hunit.hs
test/Tests/Language/: Expression.hs  LanguageUtils.hs
