cabal-version:      3.0
name:               my-prover
version:            0.1.0.0
license:            BSD-2-Clause
license-file:       LICENSE
author:             r.t.groot@student.utwente.nl
maintainer:         r.t.groot@student.utwente.nl
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common clash-options
  ghc-options:
    -Wall -Wcompat
    -haddock

    -- Plugins to support type-level constraint solving on naturals
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver

    -- Clash needs access to the source code in compiled modules
    -fexpose-all-unfoldings
    -fno-worker-wrapper
    -fno-unbox-small-strict-fields
    -fno-unbox-strict-fields
  build-depends:
    base,
    Cabal,

    -- clash-prelude will set suitable version bounds for the plugins
    clash-prelude >= 1.8.1 && < 1.10,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat

library
    import: clash-options
    exposed-modules:
      CorePrintPlugin,
      Properties,
    other-modules:
      CorePrinter,
      Language.Types,
      Language.ToGraphviz,
      Language.Translate,
      Language.LanguageUtils,
      Language,
      Primitives,
      --Rewrite.Simplify,
      Rewrite.Deconstruct,
      Invariants
    build-depends:    base,
                      ghc,
                      exceptions,
                      sbv
    hs-source-dirs:   src
    default-language: Haskell2010


-- Executable section for a test program
library test
  import: clash-options
  other-modules:
    TestModule
  hs-source-dirs:   test
  build-depends:
    base,
    my-prover
  ghc-options: -fexpose-all-unfoldings
  ghc-options: -fplugin CorePrintPlugin
  default-language:  Haskell2010
  ghc-options:       -Wall

-- Builds the executable 'clash', with simple project in scope
executable clash
  main-is: clash.hs
  hs-source-dirs:   bin
  default-language: Haskell2010
  Build-Depends: base, clash-ghc, clash-prelude, sbv
  if !os(Windows)
    ghc-options: -dynamic

-- Builds the executable 'clashi', with simple project in scope
executable clashi
  import: clash-options
  main-is: clashi.hs
  hs-source-dirs:   bin
  default-language: Haskell2010
  if !os(Windows)
    ghc-options: -dynamic
  build-depends: base, clash-ghc
