cabal-version:      3.0
name:               my-prover
version:            0.1.0.0
license:            BSD-2-Clause
license-file:       LICENSE
author:             r.t.groot@student.utwente.nl
maintainer:         r.t.groot@student.utwente.nl
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common clash-options
  ghc-options:
    -Wall -Wcompat
    -haddock

    -- Plugins to support type-level constraint solving on naturals
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver

    -- Clash needs access to the source code in compiled modules
    -fexpose-all-unfoldings
    -fno-worker-wrapper
    -fno-unbox-small-strict-fields
    -fno-unbox-strict-fields
  build-depends:
    base,
    Cabal,

    -- clash-prelude will set suitable version bounds for the plugins
    clash-prelude >= 1.8.1 && < 1.10,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat

library
    import: clash-options
    exposed-modules:
      CorePrintPlugin,
      Properties,
      CorePrinter,
      Language.ToGraphviz,
      Language.Translate,
      Language.LanguageUtils,
      Language.Types,
      Language,
      Primitives,
      Rewrite.Deconstruct,
      Invariants
    build-depends:    base,
                      ghc,
                      exceptions,
                      sbv
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hunit-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          hunit.hs
  other-modules:
    Tests.Language.LanguageUtils
  ghc-options:      -threaded
  build-depends:    base, my-prover, hedgehog
  default-language: Haskell2010

test-suite doctests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          doctests.hs
  ghc-options:      -threaded
  build-depends:    base, my-prover, doctest-parallel
  default-language: Haskell2010

-- Builds the executable 'clash', with simple project in scope
executable clash
  main-is: clash.hs
  hs-source-dirs:   bin
  default-language: Haskell2010
  Build-Depends: base, clash-ghc, clash-prelude, sbv
  if !os(Windows)
    ghc-options: -dynamic

-- Builds the executable 'clashi', with simple project in scope
executable clashi
  import: clash-options
  main-is: clashi.hs
  hs-source-dirs:   bin
  default-language: Haskell2010
  if !os(Windows)
    ghc-options: -dynamic
  build-depends: base, clash-ghc
